--- a/vercel.json
+++ b/vercel.json
@@ -12,4 +12,9 @@
       "dest": "api/index.py"
     }
   ]
+  "functions": {
+    "api/**": {
+      "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
+    }
+  }
 }
